fix overflow

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -7,6 +7,8 @@ textarea {
 }
 
 body {
+  height: 100vh;
+  width: 100vw;
   overflow-x: hidden;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
